syntax = "proto3";
package avpipeline;
option go_package = "github.com/xaionaro-go/avpipeline/protobuf/avpipeline;avpipeline";
import "libav.proto";

message Node {
    string id = 1;
    string type = 2;
    string description = 3;
    NodeStatistics statistics = 4;
    repeated Node TODO_publishingNodes = 5; // is not currently reported
    repeated Node consumingNodes = 6;
}

message NodeStatistics {
    uint64 bytesCountRead = 1;
    uint64 bytesCountWrote = 2;
    FramesOrPacketsStatistics packets = 3;
    FramesOrPacketsStatistics frames = 4;
}

message FramesOrPacketsStatistics {
    FramesOrPacketsStatisticsSection read = 3;
    FramesOrPacketsStatisticsSection missed = 4;
    FramesOrPacketsStatisticsSection wrote = 5;
}

message FramesOrPacketsStatisticsSection {
    uint64 unknown = 1;
    uint64 other = 2;
    uint64 video = 3;
    uint64 audio = 4;
}

message Object {
  uint32 type = 1;
  bytes data = 2;
}

/*
type Commons struct {
	*astiav.Frame
	*astiav.CodecContext
	StreamIndex    int
	StreamsCount   int
	StreamDuration int64
	TimeBase       astiav.Rational
	Pos            int64
	Duration       int64
}
*/

message Frame {
  libav.Frame frame = 1;
  libav.CodecContext codecContext = 2;
  int32 streamIndex = 3;
  int32 streamsCount = 4;
  int64 streamDuration = 5;
  libav.Rational timeBase = 6;
  int64 pos = 7;
  int64 duration = 8;
}
